# docs/swagger.json
@@ -749,7 +749,7 @@
             "type": "object",
             "required": [
                 "airline",
-                "airline_id",
+                "airlineid",
                 "destinationairport",
                 "sourceairport"
             ],
@@ -758,7 +758,7 @@
                     "type": "string",
                     "example": "AF"
                 },
-                "airline_id": {
+                "airlineid": {
                     "type": "string",
                     "example": "airline_10"
                 },
